--- a/weather-app/assets/styles/scss/main.scss
+++ b/weather-app/assets/styles/scss/main.scss
@@ -229,3 +229,22 @@ header {
 		}
 	}
 }
+
+footer {
+	text-align: center;
+	ul {
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+
+		li {
+			a {
+				color: #fff;
+
+				&:hover {
+					color: #fff;
+				}
+			}
+		}
+	}
+}
