--- a/weather-app/app/views/forecasts.html
+++ b/weather-app/app/views/forecasts.html
@@ -43,7 +43,7 @@
 				<div class="element">
 					<div class="time">
 						<p>
-							<i class="fa fa-clock-o" aria-hidden="true"></i> {{convertUnixToDate(forecast.time).onlyHours}}:00
+							<i class="fa fa-clock-o" aria-hidden="true"></i> {{convert.unixToDate(forecast.time).onlyHours}}:00
 						</p>
 					</div>
 
@@ -53,7 +53,7 @@
 
 					<div class="summary">
 						<p>
-							{{forecast.summary}} <span><sup>o</sup>C	{{convertFahrenheit(forecast.temperature)}}</span>
+							{{forecast.summary}} <span><sup>o</sup>C	{{convert.fahrenheitToCelsius(forecast.temperature)}}</span>
 						</p>
 					</div>
 				</div>
@@ -66,11 +66,11 @@
 		<table class="table table-hover ">
 			<tbody>
 			<tr ng-repeat="forecast in forecasts.last30Days | orderBy: 'currently.time'">
-				<td>{{convertUnixToDate(forecast.currently.time).date}}</td>
+				<td>{{convert.unixToDate(forecast.currently.time).date}}</td>
 				<td><img ng-src="assets/img/{{forecast.currently.icon}}.png" alt=""></td>
 				<td>
 					<sup>o</sup>C
-					{{convertFahrenheit(forecast.currently.temperature)}}
+					{{convert.fahrenheitToCelsius(forecast.currently.temperature)}}
 				</td>
 
 				<td>{{forecast.currently.summary}}</td>
