--- a/weather-app/assets/styles/scss/main.scss
+++ b/weather-app/assets/styles/scss/main.scss
@@ -1,4 +1,3 @@
-
 @import "bootstrap.min";
 @import "mixins";
 @import "loading-bar.min";
@@ -36,6 +35,22 @@ header {
 				width: 1.3em;
 				margin-top: -3px;
 				margin-right: 5px;
+			}
+
+			span {
+				font-size: .4em;
+				font-weight: 400;
+				background: none;
+				border: 1px solid rgba(255, 255, 255, .1);
+
+				a {
+					color: #fff;
+					text-decoration: none;
+
+					&:hover {
+						color: #fff;
+					}
+				}
 			}
 		}
 	}
