--- a/weather-app/assets/styles/css/main.css
+++ b/weather-app/assets/styles/css/main.css
@@ -7310,7 +7310,6 @@ button.close {
 }
 
 body {
-  min-height: 100vh;
   background-image: -webkit-linear-gradient(left, #396B76 0%, #99A18A 100%);
   background-image: -o-linear-gradient(left, #396B76 0%, #99A18A 100%);
   background-image: linear-gradient(to right, #396B76 0%, #99A18A 100%);
@@ -7321,6 +7320,11 @@ body {
 
 p {
   margin-bottom: 0;
+}
+
+.container {
+  background-color: rgba(255, 255, 255, 0.05);
+  min-height: 100vh;
 }
 
 header {
@@ -7391,6 +7395,7 @@ header nav ul li a:hover {
   background-clip: padding-box;
   /* stops bg color from leaking outside the border: */
   height: auto;
+  border: none;
 }
 .form-container .form-group button.btn {
   display: block;
@@ -7445,21 +7450,22 @@ header nav ul li a:hover {
   width: 150px;
 }
 
-.current-weather .description p {
-  font-size: 1.5em;
-  margin-top: 15px;
-  color: #fff;
-}
-
-.current-weather .description p span {
+.current-weather span.temperature {
   background-color: rgba(255, 255, 255, 0.1);
   -webkit-border-radius: 2px;
   border-radius: 2px;
   background-clip: padding-box;
   /* stops bg color from leaking outside the border: */
   padding: 3px 7px;
-  font-size: .9em;
   margin-left: 7px;
+  color: #fff;
+  font-size: .8em;
+}
+
+.current-weather .description p {
+  font-size: 1.5em;
+  margin-top: 15px;
+  color: #fff;
 }
 
 .detailed-weather {
