--- a/weather-app/assets/styles/scss/main.scss
+++ b/weather-app/assets/styles/scss/main.scss
@@ -10,13 +10,17 @@ $green2: #99A18A;
 $line: rgba(255, 255, 255, .1);
 
 body {
-	min-height: 100vh;
 	@include gradient-horizontal($green1, $green2);
 	overflow-y: scroll;
 }
 
 p {
 	margin-bottom: 0;
+}
+
+.container {
+	background-color: rgba(255, 255, 255, .05);
+	min-height: 100vh;
 }
 
 header {
@@ -87,6 +91,7 @@ header {
 		input {
 			@include border-radius(2px);
 			height: auto;
+			border: none;
 		}
 
 		button {
@@ -144,19 +149,23 @@ header {
 		width: 150px;
 	}
 
+	span {
+		&.temperature {
+			background-color: rgba(255, 255, 255, .1);
+			@include border-radius(2px);
+			padding: 3px 7px;
+			margin-left: 7px;
+			color: #fff;
+			font-size: .8em;
+		}
+	}
+
 	.description {
 		p {
 			font-size: 1.5em;
 			margin-top: 15px;
 			color: #fff;
 
-			span {
-				background-color: rgba(255, 255, 255, .1);
-				@include border-radius(2px);
-				padding: 3px 7px;
-				font-size: .9em;
-				margin-left: 7px;;
-			}
 		}
 	}
 }
